--- a/content/03. Japanese/Japanese Vocabulary/あそこ.md
+++ b/content/03. Japanese/Japanese Vocabulary/あそこ.md
@@ -1,21 +1,22 @@
 あそこ
-<small>pronoun
-word usually written using kana alone
-</small>
->[!note] Definition
->- there
->- over there
->- that place
->- yonder
->- you-know-where
->- place physically distant from both speaker and listener
->- Tempat yang terpisah dari diri sendiri dan lawan bicara;  
->- Tempat yang dirujuk secara tidak langsung;  
->- Titik tertentu dalam kenangan atau pernyataan yang terjadi;
-
+>[!note] 1. [[pn]], [[uk]]
+>- there | over there | that place | yonder | you-know-where place physically distant from both speaker and listener
 
 >[!info] 
 see: 
 >- [[ここ]] here; this place
 >- [[どこ]] where; what place
 >- [[そこ]] there (place relatively near listener)
+
+>[!note] 2. [[n]], [[col]], [[euph]], [[uk]]
+>- genitals | private parts | nether regions
+
+>[!note] 2. [[uk]]
+>- that far | that much | that point something psychologically distant from both speaker and listener
+
+>[!info] Terjemahan
+>- Tempat yang terpisah dari diri sendiri dan lawan bicara;  
+>- Tempat yang dirujuk secara tidak langsung;  
+>- Titik tertentu dalam kenangan atau pernyataan yang terjadi;
+
+
