--- a/content/03. Japanese/Japanese Vocabulary/ええ.md
+++ b/content/03. Japanese/Japanese Vocabulary/ええ.md
@@ -1,19 +1,32 @@
 ええ
-<small>interjection (kandoushi)
-</small>
->[!note] Definition
->- yes
->- that is correct
->- right
->  usu. ええ
->- um; errr.
->  usu. えー
->- huh?.
->  usu. えー
->- grrr; gah; Must I?.
->  usu. えー
->- 〘adj-f〙good.
+>[!note] [[Interjection]]
+>- 1. yes | that is correct | right 
+> > [!attention] Note
+> > usu. ええ
+>
+>- 2. um | errr | well 
+> > [!attention] Note
+> > usu. えー
+>
+>- 3. huh? 
+> > [!attention] Note
+> > usu. えー
+>
+>- 4. grrr | gah | must I? 
+> > [!attention] Note
+> > usu. えー
+>
+> [[Adjectival]], [[Kansai]]
+>- 5. good
+> > [!attention] Note
+> > usu. ええ
+> >
+> > > [!important] see also
+> > >  [[良い]] 
+> > > good | excellent | fine | nice | pleasant | agreeable
+
+>[!info] Terjemahan
 >- Kata yang digunakan untuk mengakui atau menerima apa yang dikatakan oleh lawan bicara, serta sebagai isyarat untuk memberikan respons seperti mengangguk;
->- Kata yang digunakan ketika tidak ada kata yang muncul atau saat memberikan jeda dalam percakapan, seperti "eh";
+>- Kata yang digunakan ketika tidak ada kata yang muncul atau saat memberikan jeda dalam percakapan, seperti "eh" ;
 
 
