--- a/content/03. Japanese/Japanese Vocabulary/おじいさん.md
+++ b/content/03. Japanese/Japanese Vocabulary/おじいさん.md
@@ -1,12 +1,13 @@
-<small>noun (common) (futsuumeishi)
-word usually written using kana alone
-</small>
->[!note] Definition
->- grandfather
->   usu. [[お祖父さん]] when written with kanji
->-  male senior-citizen
->- old man
->  usu. [[お爺さん]] when written with kanji
+>[!note] [[Noun]], [[Kana]]
+> - 1. grandfather
+> > [!attention] Note
+> > usu. [[お祖父さん]] when written with kanji
+>
+> - 2. male senior-citizen |  old man 
+> > [!attention] Note
+> > usu. [[お爺さん]] when written with kanji
+
+>[!info] Terjemahan
 >- kakek;  
 >- sebutan sopan untuk kakek;  
 >- pria lanjut usia;
