--- a/content/03. Japanese/Japanese Vocabulary/おばさん.md
+++ b/content/03. Japanese/Japanese Vocabulary/おばさん.md
@@ -1,12 +1,15 @@
-[[伯母さん]] is older than one's parent 
-[[叔母さん]] is younger
-<small>noun (common) (futsuumeishi)
-familiar language
-honorific or respectful (sonkeigo) language
-word usually written using kana alone
-</small>
->[!note] Definition
->- aunt
+伯母さん
+>[!note] [[Noun]], [[Honorific]], [[Familiar]], [[Kana]]
+> - 1. aunt 
+> > [!attention] Note
+> > [[伯父さん]] is older than one's parent and [[叔父さん]] is younger
+>
+>[[Noun]], [[Familiar]], [[Kana]]
+> -  2. old lady | ma'am 
+> > [!attention] Note
+> > usu. [[小母さん]]; vocative
+
+>[!info] Terjemahan
 >- Sebutan untuk bibi yang digunakan dengan rasa hormat dan akrab;  
 >- Istilah yang merujuk pada saudara perempuan orang tua;  
 >- Dalam konteks keluarga, dapat merujuk pada wanita yang lebih tua yang memiliki hubungan dekat dengan keluarga;
