--- a/content/03. Japanese/Japanese Vocabulary/ここ.md
+++ b/content/03. Japanese/Japanese Vocabulary/ここ.md
@@ -1,19 +1,23 @@
-ここ
-<small>pronoun
-word usually written using kana alone
-</small>
->[!note] Definition
->- here
->- this 
->- place
+>[!note] [[Pronoun]], [[Kana]]
+> 1. here | this place
+> > [!important] see also
+> > - [[そこ]] 
+> > there (place relatively near listener) 
+> >  - [[あそこ]] 
+> > there | over there | that place | yonder | you-know-where
+> > - [[どこ]] 
+> > where | what place
+>
+> 2. this point | here | now 
+> 3. these past ... (e.g. three years) | these last ... 
+> > [!attention] Note
+> > followed by a duration noun
+> 4. the next ... (e.g. few days) | these next ... 
+> > [!attention] Note
+> > followed by a duration noun
+
+>[!info] Terjemahan
 >- tempat di dekat pembicara atau tempat yang sedang dibicarakan;
 >- bagian dari ruang yang sedang digunakan atau menjadi fokus perhatian;
 >- saat ini atau keadaan saat ini;
 >- periode waktu yang relatif singkat yang sedang berlangsung;
-
-
->[!info] 
-see: 
->- [[そこ]] there (place relatively near listener)
->- [[あそこ]] there; over there; that place; yonder; you-know-where
->- [[どこ]] where; what place
