--- a/content/03. Japanese/Japanese Vocabulary/そこ.md
+++ b/content/03. Japanese/Japanese Vocabulary/そこ.md
@@ -1,16 +1,18 @@
-そこ
-<small>pronoun
-word usually written using kana alone
-</small>
->[!note] Definition
->-  there (place relatively near listener)
+>[!note] [[Kana]]
+> 1. there (place relatively near listener)
+> > [!important] see also
+> > -  [[どこ]] 
+> >  where | what place
+> > - [[ここ]]
+> > here | this place
+> > - [[あそこ]] 
+> >  there | over there | that place | yonder | you-know-where
+> 2. there (place just mentioned) | that place 
+> 3. then (of some incident just spoken of) | that (of point just raised) 
+> 4. [[Archaic]]
+>    you
+
+>[!info] Terjemahan
 >- Kata yang digunakan untuk merujuk pada tempat atau posisi yang dekat dengan orang yang diajak bicara atau yang sedang dibicarakan;
 >- Kata yang menunjukkan lokasi yang sedikit menjauh dari tempat pembicara;
 >- Kata yang merujuk pada bagian tertentu dari percakapan atau kejadian yang sedang dibahas, sebagai titik acuan dalam percakapan atau narasi;
-
-
->[!info] 
-see: 
->- [[ここ]] here; this place
->- [[あそこ]] there; over there; that place; yonder; you-know-where
->- [[どこ]] where; what place
