--- a/content/03. Japanese/Japanese Vocabulary/どこ.md
+++ b/content/03. Japanese/Japanese Vocabulary/どこ.md
@@ -1,16 +1,18 @@
-どこ
-<small>pronoun
-word usually written using kana alone
-</small>
->[!note] Definition
->- where
->- what place
+何処
+
+>[!note] [[Pronoun]], [[Kana]]
+> 1. where | what place
+>
+> > [!important] see also
+> >  - [[どこ]] 
+> > where | what place
+> >  - [[そこ]] 
+> > there (place relatively near listener) 
+> > - [[あそこ]] 
+> > there | over there | that place | yonder | you-know-where
+>
+> 2. how much (long, far) | what extent 
+
+>[!info] Terjemahan
 >- tempat; lokasi; di mana; bagian dari tempat yang menunjukkan lokasi tertentu;  
 >- sejauh mana; tingkat keparahan atau jumlah sesuatu;
-
-
->[!info] 
-see: 
->- [[ここ]] here; this place
->- [[そこ]] there (place relatively near listener)
->- [[あそこ]] there; over there; that place; yonder; you-know-where
