--- a/content/03. Japanese/Japanese Vocabulary/カード.md
+++ b/content/03. Japanese/Japanese Vocabulary/カード.md
@@ -1,12 +1,16 @@
-カード
-<small>noun (common) (futsuumeishi)
-</small>
->[!note] Definition
->- card (information, filing, etc.)
->- card (greetings, congratulations, etc.)
->- (Western) playing cards
->- (abbr) credit card
->  debit card
+>[!note] [[Noun]]
+> - 1. card (information, filing, etc.) 
+> - 2. card (greetings, congratulations, etc.) 
+> - 3. (Western) playing cards 
+> 
+> - 4. [[Abbreviation]]
+> credit card | debit card 
+>
+> - 5. [[Sports]]
+> card | program | matchup | pairing 
+> - 6. dough scraper | spatula 
+
+>[!info] Terjemahan
 >- kertas persegi panjang yang digunakan untuk menulis atau mencetak informasi;  
 >- papan persegi panjang kecil yang dapat dipegang di tangan, seukuran kartu nama;  
 >- alat atau media untuk melakukan kombinasi atau strategi dalam permainan atau pertaruhan;
