--- a/content/03. Japanese/Japanese Vocabulary/スーパー.md
+++ b/content/03. Japanese/Japanese Vocabulary/スーパー.md
@@ -1,12 +1,24 @@
 スーパー
-<small>
-noun (common) (futsuumeishi)
-abbreviation</small>
->[!note] Definition
->- supermarket
+>[!note] [[Noun]], [[Abbreviation]]
+>1. supermarket
+> > [!important] see also
+> > [[スーパーマーケット]]
+> > supermarket
+>
+>2. subtitles | telop 
+> > [!important] see also
+> > [[スーパーインポーズ]] 
+> > subtitles | telop 
+>
+>3. superheterodyne
+> > [!important] see also
+> > [[スーパーヘテロダイン]] 
+> > superheterodyne
+>
+>4. [[Adjectival]]
+>   super
+
+
+>[!info] Terjemahan
 >- Supermarket atau toko swalayan besar yang menjual berbagai macam barang kebutuhan sehari-hari;
 
-
->[!info] 
-see: 
->- [[スーパーマーケット]] supermarket
