--- a/content/03. Japanese/Japanese Vocabulary/スーパーマーケット.md
+++ b/content/03. Japanese/Japanese Vocabulary/スーパーマーケット.md
@@ -1,11 +1,9 @@
 スーパーマーケット
-<small>
-noun (common) (futsuumeishi)</small>
->[!note] Definition
->- supermarket
+>[!note] [[Noun]]
+>supermarket
+> > [!important] see also
+> > [[スーパー]]
+> > supermarket
+
+>[!info] Terjemahan
 >- Toko swalayan yang menjual berbagai macam bahan makanan dan kebutuhan rumah tangga dengan sistem swalayan sendiri, biasanya menawarkan harga yang relatif murah dan pelayanan otomatis;
-
-
->[!info] 
-see: 
->- [[スーパー]] supermarket
