--- a/content/03. Japanese/Japanese Vocabulary/ノート.md
+++ b/content/03. Japanese/Japanese Vocabulary/ノート.md
@@ -1,15 +1,19 @@
 ノート
-<small>noun (common) (futsuumeishi)
-abbreviation
-</small>
->[!note] Definition
->- notebook
->- copy-book
->- exercise book
->- laptop (computer)
->- notebook (computer)
->- Kertas kecil atau buku kecil yang digunakan untuk mencatat informasi, catatan, atau pengingat; buku catatan; buku tulis; catatan; buku kecil yang digunakan untuk mencatat sesuatu
 
->[!info] 
-see: 
->- [[ノートブック]] notebook
+>[!note] [[Noun]], [[Abbreviation]]
+> 1. notebook | copy-book | exercise book
+> > [!important] see also
+> > [[ノートブック]] 
+> > notebook
+>2. [[Noun]], [[Suru]], [[Transitive]]
+>   note | noting down 
+>3. [[Noun]]
+>   (musical) note
+>4. [[Abbreviation]]
+>   laptop (computer)  notebook | (computer)
+> > [!important] see also
+> > [[ノートパソコン]] 
+> > laptop (computer) | notebook (computer)
+
+>[!info] Terjemahan
+>- Kertas kecil atau buku kecil yang digunakan untuk mencatat informasi, catatan, atau pengingat; buku catatan; buku tulis; catatan; buku kecil yang digunakan untuk mencatat sesuatu
