--- a/content/03. Japanese/Japanese Vocabulary/仮名.md
+++ b/content/03. Japanese/Japanese Vocabulary/仮名.md
@@ -1,8 +1,11 @@
 かな
-<small>noun (common) (futsuumeishi)
-</small>
->[!note] Definition
->- kana | Japanese syllabaries (i.e. hiragana and katakana)
+>[!note] [[Noun]]
+> kana | Japanese syllabaries (i.e. hiragana and katakana)
+> > [!important] see also
+> > [[真名]]
+> >  kanji (as opposed to kana)
+
+>[!info] Terjemahan
 >- sistem penulisan dalam bahasa Jepang yang terdiri dari dua jenis huruf, yaitu hiragana dan katakana, yang digunakan untuk mewakili suku kata;  
 >- karakter yang digunakan dalam penulisan bahasa Jepang yang berasal dari bentuk kanji;  
 >- simbol fonetik yang digunakan dalam kombinasi dengan kanji untuk membentuk kalimat dalam bahasa Jepang;
