--- a/content/03. Japanese/Japanese Vocabulary/勇気.md
+++ b/content/03. Japanese/Japanese Vocabulary/勇気.md
@@ -1,13 +1,8 @@
 ゆうき
-<small>n noun (common) (futsuumeishi)
-</small>
->[!note] Definition
->- courage
->- bravery
->- valour
->- valor
->- nerve
->- boldness
+>[!note] [[Noun]]
+> courage | bravery | valour | valor | nerve | boldness 
+
+>[!info] Terjemahan
 >- perasaan berani dan tidak takut dalam menghadapi berbagai situasi;
 >- semangat yang kuat untuk menghadapi tantangan tanpa rasa takut;
 >- keberanian dan keteguhan hati dalam bertindak;
