--- a/content/03. Japanese/Japanese Vocabulary/取る.md
+++ b/content/03. Japanese/Japanese Vocabulary/取る.md
@@ -1,19 +1,23 @@
 とる
-<small>Godan verb with 'ru' ending
-transitive verb
-</small>
->[!note] Definition
->- to take
->- to pick up
->- to grab
->- to catch
->- to hold
->- mengambil sesuatu dengan tangan;
->- memungut;
->- memetik;
->- menuai;
->- memperoleh;
->- mendapatkan;
->- memenangkan;
->- memilih;
->- memetik hasil panen atau hasil tangkapan;
+>[!note] [[5-dan]], [[transitive]]
+> 1. to take | to pick up | to grab | to catch | to hold
+> 2. to pass | to hand | to give
+> 3. to get | to obtain | to acquire | to win | to receive | to earn | to take (e.g. a vacation)
+> 4. to adopt (a method, proposal, etc.) | to take (a measure, attitude, etc.) | to choose
+> 5. to remove | to get rid of | to take off
+> 6. to take away | to steal | to rob
+> 7. to eat | to have (e.g. lunch) | to take (e.g. vitamins)
+> > [!important] see also
+> > [[摂る]] 
+> > to have (e.g. lunch) | to take (e.g. vitamins)
+> 8. to pick (e.g. flowers) | to gather | to extract (e.g. juice) | to catch (e.g. fish) | to harvest (a crop)
+> 9. to take up (time, space) | to occupy | to spare | to set aside
+> 10. to secure | to reserve | to save | to put aside | to keep
+> 11. to take (e.g. a joke) | to interpret | to understand | to make out | to grasp
+> 12. to record | to take down
+> 13. to subscribe to (e.g. a newspaper) | to take | to buy | to get
+> 14. to order | to have delivered
+> 15. to charge | to fine | to take (tax)
+> 16. to take (e.g. a wife) | to take on (e.g. an apprentice) | to adopt | to accept
+> 17. to take control of | to take (the rudder)
+> 18. to compete (in sumo, cards, etc.) | to play
