--- a/content/03. Japanese/Japanese Vocabulary/平野.md
+++ b/content/03. Japanese/Japanese Vocabulary/平野.md
@@ -1,8 +1,7 @@
 へいや
-<small>noun (common) (futsuumeishi)
-</small>
->[!note] Definition
->- plain
->- open field
+>[!note] [[Noun]]
+>plain | open field
+
+>[!info] Terjemahan
 >- tanah yang rendah, datar, dan luas;  
 >- padang atau lapangan terbuka;
