--- a/content/03. Japanese/Japanese Vocabulary/拍.md
+++ b/content/03. Japanese/Japanese Vocabulary/拍.md
@@ -1,14 +1,14 @@
 はく
-<small>ctr counter
-n noun (common) (futsuumeishi)
-music
-</small>
->[!note] Definition
->- beat
+>[!note] [[Noun]], [[Counter]]
+> - 1. [[Music]]
+>   beat
+> - 2. [[Linguistics]]
+>   mora
+> > [!important] see also
+> > [[モーラ]]
+> >  mora
 
-<small>ling linguistics
-</small>
->[!note] Definition
+>[!info] Terjemahan
 >- mora
 >- Unit pengukuran waktu dalam musik yang menunjukkan satu ketukan;  
 >- Satuan dalam bahasa Jepang yang digunakan untuk mengukur ritme atau irama, biasanya setara dengan satu suara atau satu bunyi dalam sebuah bar atau frasa;  
