--- a/content/03. Japanese/Japanese Vocabulary/日本語.md
+++ b/content/03. Japanese/Japanese Vocabulary/日本語.md
@@ -1,6 +1,7 @@
 にほんご
-<small>noun</small>
->[!note] Definition
->- Japanese (language)
+>[!note] [[Noun]]
+>Japanese (language)
+
+>[!info] Terjemahan
 >- bahasa yang digunakan di Jepang, memiliki struktur kalimat yang mengikuti urutan subjek, objek, dan predikat, dengan banyak penggunaan partikel dan bentuk bantu;  
 >- bahasa resmi dan umum digunakan di Jepang, dikenal sebagai bahasa nasional dan memiliki sistem penulisan yang meliputi kanji, hiragana, dan katakana;
