--- a/content/03. Japanese/Japanese Vocabulary/絵.md
+++ b/content/03. Japanese/Japanese Vocabulary/絵.md
@@ -1,16 +1,9 @@
 え
-<small>n noun (common) (futsuumeishi)
-</small>
->[!note] Definition
->- picture
->- drawing
->- painting
->- sketch
->-  image (TV, film, etc.)
->- picture
->- footage
+>[!note] [[Noun]]
+> 1. picture | drawing | painting | sketch 
+> 2. image (TV, film, etc.) | picture | footage
+
+>[!info] Terjemahan
 >- gambar, lukisan, atau sketsa yang menggambarkan bentuk atau keadaan sesuatu secara visual;
 >- gambar atau rekaman dalam media seperti televisi atau film;
 >- komposisi atau konsep visual;
-
-
