--- a/content/03. Japanese/Japanese Vocabulary/通る.md
+++ b/content/03. Japanese/Japanese Vocabulary/通る.md
@@ -1,17 +1,26 @@
 とおる
-<small>Godan verb with 'ru' ending
-intransitive verb
-</small>
->[!note] Definition
->- to go by
->- to go past
->- to go along
->- to travel along
->- to pass through
->- to use (a road)
->- to take (a route)
->- to go via
->- to go by way of
+>[!note] [[5-dan]], [[Intransitive]]
+> - 1. to go by | to go past | to go along | to travel along | to pass through | to use (a road) | to take (a route) | to go via | to go by way of
+> - 2. to run (between; of a rail service, bus route, etc.) | to operate (between) | to connect
+> - 3. to go indoors | to go into a room | to be admitted | to be shown in | to be ushered in | to come in
+> - 4. to penetrate | to pierce | to skewer | to go through | to come through
+> - 5. to permeate | to soak into | to spread throughout
+> - 6. to carry (e.g. of a voice) | to reach for
+> - 7. to be passed on (e.g. of a customer's order to the kitchen) | to be relayed | to be conveyed
+> - 8. to pass (a test, a bill in the House, etc.) | to be approved | to be accepted
+> - 9. to go by (a name) | to be known as | to be accepted as | to have a reputation for
+> - 10. to be coherent | to be logical | to be reasonable | to be comprehensible | to be understandable | to make sense
+> - 11. to get across (e.g. of one's point) | to be understood
+> - 12. to pass for | to come across as | to seem like
+> - 13. to be straight (e.g. wood grain)
+> - 14. [[Archaic]]
+>   to be well-informed | to be wise
+> - 15. [[Suffix]], [[5-dan]]
+>   to do ... completely | to do ... thoroughly
+> > [!attention] Note
+> > after the -masu stem of a verb
+
+>[!info] Terjemahan
 >- melewati atau berjalan di sepanjang suatu jalur atau rute; menggunakan jalan atau jalur tertentu; melalui;  
 >- melintasi atau melalui suatu tempat atau ruang; masuk ke dalam ruangan atau bangunan;  
 >- menembus atau menembus sesuatu; menembus atau menembus permukaan;  
