--- a/content/03. Japanese/Japanese Vocabulary/部屋.md
+++ b/content/03. Japanese/Japanese Vocabulary/部屋.md
@@ -1,9 +1,15 @@
 へや
-<small>noun (common) (futsuumeishi)
-</small>
->[!note] Definition
->- room
->- chamber
+>[!note] [[Noun]]
+> - 1. room | chamber
+> - 2. apartment | flat | pad
+>   
+> [[Abbreviation]], [[Sumō]]
+> - 3. Stable
+> > [!important] see also
+> > [[相撲部屋]]
+> > stable
+
+>[!info] Terjemahan
 >- ruangan atau kamar di dalam rumah yang dipisahkan untuk tempat tinggal;  
 >- apartemen atau flat;  
 >- istilah singkatan untuk tempat tinggal pegulat sumo;
