--- a/content/03. Japanese/Japanese Vocabulary/高等学校.md
+++ b/content/03. Japanese/Japanese Vocabulary/高等学校.md
@@ -1,12 +1,7 @@
 こうとうがっこう
-<small>n 
-</small>
->[!note] Definition
->- senior high school
->- high school
+>[!note] [[Noun]]
+>senior high school | high school
+
+>[!info] Terjemahan
 >- Sekolah menengah atas yang setara dengan tingkat pendidikan sebelum memasuki perguruan tinggi; sekolah tinggi yang biasanya diikuti oleh siswa berusia 15 hingga 18 tahun;  
 >- (Istilah pendidikan) Sekolah menengah atas di Jepang yang menyediakan pendidikan lanjutan setelah sekolah menengah pertama dan sebelum universitas.
-
->[!info] 
-see: 
->- [[高校]] senior high school; high school
