--- a/content/03. Japanese/Japanese Vocabulary/あそこ.md
+++ b/content/03. Japanese/Japanese Vocabulary/あそこ.md
@@ -1,22 +1,34 @@
 あそこ
->[!note] 1. [[pn]], [[uk]]
->- there | over there | that place | yonder | you-know-where place physically distant from both speaker and listener
-
->[!info] 
-see: 
->- [[ここ]] here; this place
->- [[どこ]] where; what place
->- [[そこ]] there (place relatively near listener)
-
->[!note] 2. [[n]], [[col]], [[euph]], [[uk]]
->- genitals | private parts | nether regions
-
->[!note] 2. [[uk]]
->- that far | that much | that point something psychologically distant from both speaker and listener
+>[!note] [[Pronoun]], [[Kana]]
+> - 1. there | over there | that place | yonder | you-know-where
+> > [!attention] Note
+> > physically distant from both speaker and listener
+> > 
+> > > [!important] see also
+> > > - [[どこ]] 
+> > > where | what place
+> > > - [[ここ]] 
+> > > here | this place
+> > > - [[そこ]] 
+> > > there (place relatively near listener)
+>
+>[[Noun]], [[Colloquial]], [[Kana]], [[Euphemism]]
+> - 2. 〔あそこ・あすこ・アソコ only〕
+genitals | private parts | nether regions
+>
+>[[Noun]], [[Kana]]
+> - 3. that far | that much | that point
+> > [!attention] Note
+> > something psychologically distant from both speaker and listener
+> > 
+> > > [!important] see also
+> > > [[あれほど]] 
+> > > to that extent
 
 >[!info] Terjemahan
->- Tempat yang terpisah dari diri sendiri dan lawan bicara;  
->- Tempat yang dirujuk secara tidak langsung;  
+>- Tempat yang terpisah dari diri sendiri dan lawan bicara;
+>- Tempat yang dirujuk secara tidak langsung;
 >- Titik tertentu dalam kenangan atau pernyataan yang terjadi;
+
 
 
