--- a/content/03. Japanese/Japanese Vocabulary/おじさん.md
+++ b/content/03. Japanese/Japanese Vocabulary/おじさん.md
@@ -1,17 +1,25 @@
- - [[伯父さん]] is older than one's parent
- - [[叔父さん]] is younger
-<small>noun (common) (futsuumeishi)
-familiar language
-honorific or respectful (sonkeigo) language
-word usually written using kana alone
-</small>
->[!note] Definition
->- uncle
->- old man
->- mister
->  usu. 小父さん or おじさん; vocative
->- manybar goatfish (Parupeneus multifasciatus)
->  usu. オジサン
+伯父さん
+>[!note] [[Noun]], [[Kana]]
+> - 1. [[Honorific]], [[Familiar]] 
+>   uncle
+> > [!attention] Note
+> > [[伯父さん]] is older than one's parent and [[叔父さん]] is younger
+>
+> - 2. [[Familiar]]
+>   old man | mister
+> > [!attention] Note
+> > usu. [[小父さん]] or [[おじさん]]; vocative
+> - 3. manybar goatfish (Parupeneus multifasciatus) 
+> > [!attention] Note
+> > usu. [[オジサン]]
+>
+> > [!example] other forms
+> > - 叔父さん
+> > - 小父さん
+> > - オジサン
+> > - オジさん
+
+>[!info] Terjemahan
 >- Paman, saudara laki-laki dari ayah atau ibu;
 
 
