--- a/content/03. Japanese/Japanese Vocabulary/おばあさん.md
+++ b/content/03. Japanese/Japanese Vocabulary/おばあさん.md
@@ -1,12 +1,22 @@
-<small>noun (common) (futsuumeishi)
-word usually written using kana alone
-</small>
->[!note] Definition
->- grandmother
->   usu. [[お祖母さん]] when written with kanji
->- old woman
->  female senior citizen
->  usu. [[お婆さん]] when written with kanji
+お祖母さん
+>[!note] [[Noun]], [[Kana]]
+> - 1. grandmother
+> > [!attention] Note
+> > usu. [[お祖母さん]] when written with kanji
+> > 
+> > > [!important]  see also
+> > > [[祖母さん]] 
+> > > grandmother
+>
+> - 2. old woman | female senior citizen
+> > [!attention] Note
+> > usu. [[お婆さん]] when written with kanji
+> > 
+> > > [!important] see also
+> > > [[婆さん]] 
+> > > old woman | female senior citizen
+
+>[!info] Terjemahan
 >- nenek;  
 >- wanita tua; warga senior perempuan;
 
