--- a/content/03. Japanese/Japanese Vocabulary/タクシー.md
+++ b/content/03. Japanese/Japanese Vocabulary/タクシー.md
@@ -1,8 +1,9 @@
 タクシー
-<small>noun (common) (futsuumeishi)
-</small>
->[!note] Definition
->- taxi
+
+>[!note] [[Noun]]
+> taxi
+
+>[!info] Terjemahan
 >- Kendaraan bermotor yang digunakan untuk mengangkut penumpang dengan biaya tertentu;  
 >- Kendaraan umum yang biasanya disewa untuk perjalanan jarak jauh atau tujuan tertentu;  
 >- Kendaraan yang berfungsi sebagai transportasi umum di jalan raya yang dikemudikan oleh pengemudi profesional;
