--- a/content/03. Japanese/Japanese Vocabulary/発音.md
+++ b/content/03. Japanese/Japanese Vocabulary/発音.md
@@ -1,10 +1,8 @@
 はつおん
-<small>noun (common) (futsuumeishi)
-noun or participle which takes the aux. verb suru
-transitive verb
-</small>
->[!note] Definition
->- pronunciation
->- production of sound
+>[!note] [[Noun]], [[Suru]], [[Transitive]]
+> 1. pronunciation
+> 2. production of sound
+
+>[!info] Terjemahan
 >- Cara mengucapkan kata-kata dengan suara; produksi suara saat berbicara atau membaca;
 >- bunyi yang dihasilkan saat mengucapkan kata-kata; suara yang terdengar saat berbicara.
