--- a/content/03. Japanese/Japanese Vocabulary/短音.md
+++ b/content/03. Japanese/Japanese Vocabulary/短音.md
@@ -1,11 +1,11 @@
 たんおん
-<small>n noun (common) (futsuumeishi)
-</small>
->[!note] Definition
->- short sound
+>[!note] [[Noun]]
+> short sound
+> > [!important] see also
+> > [[長音]]
+> > long sound | prolonged sound | long vowel
+
+>[!info] Terjemahan
 >- Suara yang pendek dan singkat dalam bahasa Jepang;  
 >- Suara yang memiliki durasi lebih pendek dibandingkan dengan suara panjang dalam pengucapan kata atau bunyi;  
 >- Istilah dalam linguistik Jepang yang merujuk pada bunyi yang diucapkan dengan durasi singkat.
-
->[!info] 
->see: [[長音]] long sound; prolonged sound; long vowel
