--- a/content/03. Japanese/Japanese Vocabulary/長音.md
+++ b/content/03. Japanese/Japanese Vocabulary/長音.md
@@ -1,13 +1,11 @@
 ちょうおん
-<small>n noun (common) (futsuumeishi)
-</small>
->[!note] Definition
->- long sound
->- prolonged sound
->- long vowel
+>[!note] [[Noun]]
+>long sound | prolonged sound | long vowel 
+> > [!important] see also
+> > [[短音]] 
+> > short sound
+
+>[!info] Terjemahan
 >- bunyi panjang yang dihasilkan saat memperpanjang suara dalam pengucapan huruf vokal tertentu dalam bahasa Jepang;  
 >- istilah linguistik yang merujuk pada penggunaan vokal yang diperpanjang dalam pengucapan kata atau suku kata dalam bahasa Jepang;  
 >- tanda atau simbol yang menunjukkan bahwa vokal harus dilafalkan lebih lama dari biasanya dalam penulisan atau pengucapan bahasa Jepang
-
->[!info] 
->see: [[短音]] short sound
