--- a/content/03. Japanese/Japanese Vocabulary/雪.md
+++ b/content/03. Japanese/Japanese Vocabulary/雪.md
@@ -1,9 +1,8 @@
 ゆき
-<small>n noun (common) (futsuumeishi)
-</small>
->[!note] Definition
->- snow
->- snowfall
+>[!note] [[Noun]]
+>snow | snowfall
+
+>[!info] Terjemahan
 >- butiran putih yang jatuh dari langit saat musim dingin, terdiri dari kristal es yang membeku;
 >- cuaca yang ditandai dengan turunnya salju;
 >- proses turunnya salju;
