--- a/content/03. Japanese/Japanese Vocabulary/高校.md
+++ b/content/03. Japanese/Japanese Vocabulary/高校.md
@@ -1,13 +1,11 @@
 こうこう
-<small>n 
-abbr
-</small>
->[!note] Definition
->- senior high school
->- high school
+>[!note] [[Noun]], [[Abbreviation]]
+>senior high school | high school
+> > [!important] see also
+> >  [[高等学校]]
+> > senior high school | high school
+> 
+
+>[!info] Terjemahan
 >- Sekolah menengah atas yang setara dengan pendidikan tingkat tinggi sekolah menengah atas di Jepang;
 >- Singkatan dari "kōkō" yang merujuk pada jenjang pendidikan terakhir di sekolah menengah atas;
-
->[!info] 
-see: 
->- [[高等学校]] senior high school; high school
