--- a/content/03. Japanese/Japanese Vocabulary/あそこ.md
+++ b/content/03. Japanese/Japanese Vocabulary/あそこ.md
@@ -1,6 +1,7 @@
 あそこ
->[!note] [[Pronoun]], [[Kana]]
-> - 1. there | over there | that place | yonder | you-know-where
+>[!note] Definition
+> 1. [[Pronoun]], [[Kana]]
+>   there | over there | that place | yonder | you-know-where
 > > [!attention] Note
 > > physically distant from both speaker and listener
 > > 
@@ -12,12 +13,12 @@
 > > > - [[そこ]] 
 > > > there (place relatively near listener)
 >
->[[Noun]], [[Colloquial]], [[Kana]], [[Euphemism]]
-> - 2. 〔あそこ・あすこ・アソコ only〕
+> 2. [[Noun]], [[Colloquial]], [[Kana]], [[Euphemism]]
+>   〔あそこ・あすこ・アソコ only〕
 genitals | private parts | nether regions
 >
->[[Noun]], [[Kana]]
-> - 3. that far | that much | that point
+> 3. [[Noun]], [[Kana]]
+>   that far | that much | that point
 > > [!attention] Note
 > > something psychologically distant from both speaker and listener
 > > 
