--- a/content/03. Japanese/Japanese Vocabulary/ええ.md
+++ b/content/03. Japanese/Japanese Vocabulary/ええ.md
@@ -1,23 +1,24 @@
 ええ
->[!note] [[Interjection]]
->- 1. yes | that is correct | right 
+>[!note] Definition
+> 1. [[Interjection]]
+>  yes | that is correct | right 
 > > [!attention] Note
 > > usu. ええ
 >
->- 2. um | errr | well 
+> 2. um | errr | well 
 > > [!attention] Note
 > > usu. えー
 >
->- 3. huh? 
+> 3. huh? 
 > > [!attention] Note
 > > usu. えー
 >
->- 4. grrr | gah | must I? 
+> 4. grrr | gah | must I? 
 > > [!attention] Note
 > > usu. えー
 >
-> [[Adjectival]], [[Kansai]]
->- 5. good
+>  5. [[Adjectival]], [[Kansai]]
+>  good
 > > [!attention] Note
 > > usu. ええ
 > >
