--- a/content/03. Japanese/Japanese Vocabulary/おじいさん.md
+++ b/content/03. Japanese/Japanese Vocabulary/おじいさん.md
@@ -1,9 +1,10 @@
->[!note] [[Noun]], [[Kana]]
-> - 1. grandfather
+>[!note] Definition
+> 1.  [[Noun]], [[Kana]]
+>   grandfather
 > > [!attention] Note
 > > usu. [[お祖父さん]] when written with kanji
 >
-> - 2. male senior-citizen |  old man 
+> 2. male senior-citizen |  old man 
 > > [!attention] Note
 > > usu. [[お爺さん]] when written with kanji
 
