--- a/content/03. Japanese/Japanese Vocabulary/おじさん.md
+++ b/content/03. Japanese/Japanese Vocabulary/おじさん.md
@@ -1,15 +1,16 @@
 伯父さん
->[!note] [[Noun]], [[Kana]]
-> - 1. [[Honorific]], [[Familiar]] 
+>[!note] Definition
+> 1. [[Noun]], [[Kana]]
+>   [[Honorific]], [[Familiar]] 
 >   uncle
 > > [!attention] Note
 > > [[伯父さん]] is older than one's parent and [[叔父さん]] is younger
 >
-> - 2. [[Familiar]]
+> 2. [[Familiar]]
 >   old man | mister
 > > [!attention] Note
 > > usu. [[小父さん]] or [[おじさん]]; vocative
-> - 3. manybar goatfish (Parupeneus multifasciatus) 
+> 3. manybar goatfish (Parupeneus multifasciatus) 
 > > [!attention] Note
 > > usu. [[オジサン]]
 >
