--- a/content/03. Japanese/Japanese Vocabulary/おばさん.md
+++ b/content/03. Japanese/Japanese Vocabulary/おばさん.md
@@ -1,11 +1,11 @@
 伯母さん
->[!note] [[Noun]], [[Honorific]], [[Familiar]], [[Kana]]
-> - 1. aunt 
+>[!note] Definition
+> 1. [[Noun]], [[Honorific]], [[Familiar]], [[Kana]]
+>   aunt 
 > > [!attention] Note
 > > [[伯父さん]] is older than one's parent and [[叔父さん]] is younger
->
->[[Noun]], [[Familiar]], [[Kana]]
-> -  2. old lady | ma'am 
+> 2. [[Noun]], [[Familiar]], [[Kana]]
+>    old lady | ma'am 
 > > [!attention] Note
 > > usu. [[小母さん]]; vocative
 
