--- a/content/03. Japanese/Japanese Vocabulary/ここ.md
+++ b/content/03. Japanese/Japanese Vocabulary/ここ.md
@@ -1,5 +1,6 @@
->[!note] [[Pronoun]], [[Kana]]
-> 1. here | this place
+>[!note] Definition
+>[[Pronoun]], [[Kana]]
+> 1.  here | this place
 > > [!important] see also
 > > - [[そこ]] 
 > > there (place relatively near listener) 
