--- a/content/03. Japanese/Japanese Vocabulary/そこ.md
+++ b/content/03. Japanese/Japanese Vocabulary/そこ.md
@@ -1,5 +1,6 @@
->[!note] [[Kana]]
-> 1. there (place relatively near listener)
+>[!note] Definition
+> 1. [[Kana]]
+>    there (place relatively near listener)
 > > [!important] see also
 > > -  [[どこ]] 
 > >  where | what place
