--- a/content/03. Japanese/Japanese Vocabulary/どこ.md
+++ b/content/03. Japanese/Japanese Vocabulary/どこ.md
@@ -1,8 +1,8 @@
 何処
 
->[!note] [[Pronoun]], [[Kana]]
+>[!note] Definition
+>[[Pronoun]], [[Kana]]
 > 1. where | what place
->
 > > [!important] see also
 > >  - [[どこ]] 
 > > where | what place
