--- a/content/03. Japanese/Japanese Vocabulary/カード.md
+++ b/content/03. Japanese/Japanese Vocabulary/カード.md
@@ -1,14 +1,13 @@
->[!note] [[Noun]]
-> - 1. card (information, filing, etc.) 
-> - 2. card (greetings, congratulations, etc.) 
-> - 3. (Western) playing cards 
-> 
-> - 4. [[Abbreviation]]
+>[!note] Definition
+>  1. [[Noun]]
+>   card (information, filing, etc.) 
+> 2. card (greetings, congratulations, etc.) 
+> 3. (Western) playing cards 
+> 4. [[Abbreviation]]
 > credit card | debit card 
->
-> - 5. [[Sports]]
+> 5. [[Sports]]
 > card | program | matchup | pairing 
-> - 6. dough scraper | spatula 
+> 6. dough scraper | spatula 
 
 >[!info] Terjemahan
 >- kertas persegi panjang yang digunakan untuk menulis atau mencetak informasi;  
