--- a/content/03. Japanese/Japanese Vocabulary/スーパー.md
+++ b/content/03. Japanese/Japanese Vocabulary/スーパー.md
@@ -1,6 +1,7 @@
 スーパー
->[!note] [[Noun]], [[Abbreviation]]
->1. supermarket
+>[!note] Definition
+>1. [[Noun]], [[Abbreviation]]
+>   supermarket
 > > [!important] see also
 > > [[スーパーマーケット]]
 > > supermarket
@@ -14,10 +15,8 @@
 > > [!important] see also
 > > [[スーパーヘテロダイン]] 
 > > superheterodyne
->
 >4. [[Adjectival]]
 >   super
-
 
 >[!info] Terjemahan
 >- Supermarket atau toko swalayan besar yang menjual berbagai macam barang kebutuhan sehari-hari;
