--- a/content/03. Japanese/Japanese Vocabulary/ノート.md
+++ b/content/03. Japanese/Japanese Vocabulary/ノート.md
@@ -1,7 +1,8 @@
 ノート
 
->[!note] [[Noun]], [[Abbreviation]]
-> 1. notebook | copy-book | exercise book
+>[!note] Definition
+> 1. [[Noun]], [[Abbreviation]]
+>    notebook | copy-book | exercise book
 > > [!important] see also
 > > [[ノートブック]] 
 > > notebook
