--- a/content/03. Japanese/Japanese Vocabulary/仮名.md
+++ b/content/03. Japanese/Japanese Vocabulary/仮名.md
@@ -1,5 +1,6 @@
 かな
->[!note] [[Noun]]
+>[!note] Definition
+>[[Noun]]
 > kana | Japanese syllabaries (i.e. hiragana and katakana)
 > > [!important] see also
 > > [[真名]]
