--- a/content/03. Japanese/Japanese Vocabulary/勇気.md
+++ b/content/03. Japanese/Japanese Vocabulary/勇気.md
@@ -1,5 +1,6 @@
 ゆうき
->[!note] [[Noun]]
+>[!note] Definition
+> [[Noun]]
 > courage | bravery | valour | valor | nerve | boldness 
 
 >[!info] Terjemahan
