--- a/content/03. Japanese/Japanese Vocabulary/取る.md
+++ b/content/03. Japanese/Japanese Vocabulary/取る.md
@@ -1,5 +1,6 @@
 とる
->[!note] [[5-dan]], [[transitive]]
+>[!note] Definition
+>[[5-dan]], [[transitive]]
 > 1. to take | to pick up | to grab | to catch | to hold
 > 2. to pass | to hand | to give
 > 3. to get | to obtain | to acquire | to win | to receive | to earn | to take (e.g. a vacation)
