--- a/content/03. Japanese/Japanese Vocabulary/拍.md
+++ b/content/03. Japanese/Japanese Vocabulary/拍.md
@@ -1,8 +1,9 @@
 はく
->[!note] [[Noun]], [[Counter]]
-> - 1. [[Music]]
+>[!note] Definition
+>[[Noun]], [[Counter]]
+> 1. [[Music]]
 >   beat
-> - 2. [[Linguistics]]
+> 2. [[Linguistics]]
 >   mora
 > > [!important] see also
 > > [[モーラ]]
