--- a/content/03. Japanese/Japanese Vocabulary/発音.md
+++ b/content/03. Japanese/Japanese Vocabulary/発音.md
@@ -1,5 +1,6 @@
 はつおん
->[!note] [[Noun]], [[Suru]], [[Transitive]]
+>[!note] Definition
+>[[Noun]], [[Suru]], [[Transitive]]
 > 1. pronunciation
 > 2. production of sound
 
