--- a/content/03. Japanese/Japanese Vocabulary/絵.md
+++ b/content/03. Japanese/Japanese Vocabulary/絵.md
@@ -1,5 +1,6 @@
 え
->[!note] [[Noun]]
+>[!note] Definition
+>[[Noun]]
 > 1. picture | drawing | painting | sketch 
 > 2. image (TV, film, etc.) | picture | footage
 
