--- a/content/03. Japanese/Japanese Vocabulary/部屋.md
+++ b/content/03. Japanese/Japanese Vocabulary/部屋.md
@@ -1,10 +1,10 @@
 へや
->[!note] [[Noun]]
-> - 1. room | chamber
-> - 2. apartment | flat | pad
->   
-> [[Abbreviation]], [[Sumō]]
-> - 3. Stable
+>[!note] Definition 
+> 1. [[Noun]]
+>   room | chamber
+> 2. apartment | flat | pad
+> 3. [[Abbreviation]], [[Sumō]]
+>    Stable
 > > [!important] see also
 > > [[相撲部屋]]
 > > stable
