--- a/content/03. Japanese/Japanese Vocabulary/長音.md
+++ b/content/03. Japanese/Japanese Vocabulary/長音.md
@@ -1,5 +1,6 @@
 ちょうおん
->[!note] [[Noun]]
+>[!note] Definition 
+>[[Noun]]
 >long sound | prolonged sound | long vowel 
 > > [!important] see also
 > > [[短音]] 
