--- a/content/03. Japanese/Japanese Vocabulary/高校.md
+++ b/content/03. Japanese/Japanese Vocabulary/高校.md
@@ -1,5 +1,6 @@
 こうこう
->[!note] [[Noun]], [[Abbreviation]]
+>[!note] Definition 
+>[[Noun]], [[Abbreviation]]
 >senior high school | high school
 > > [!important] see also
 > >  [[高等学校]]
