--- a/content/03. Japanese/Japanese Vocabulary/おばあさん.md
+++ b/content/03. Japanese/Japanese Vocabulary/おばあさん.md
@@ -1,6 +1,7 @@
 お祖母さん
->[!note] [[Noun]], [[Kana]]
-> - 1. grandmother
+>[!note] Definition
+>1. [[Noun]], [[Kana]]
+> grandmother
 > > [!attention] Note
 > > usu. [[お祖母さん]] when written with kanji
 > > 
@@ -8,7 +9,7 @@
 > > > [[祖母さん]] 
 > > > grandmother
 >
-> - 2. old woman | female senior citizen
+> 2. old woman | female senior citizen
 > > [!attention] Note
 > > usu. [[お婆さん]] when written with kanji
 > > 
