--- a/content/03. Japanese/Japanese Vocabulary/ここ.md
+++ b/content/03. Japanese/Japanese Vocabulary/ここ.md
@@ -1,6 +1,6 @@
 >[!note] Definition
->[[Pronoun]], [[Kana]]
-> 1.  here | this place
+> 1.  [[Pronoun]], [[Kana]]
+> 2. here | this place
 > > [!important] see also
 > > - [[そこ]] 
 > > there (place relatively near listener) 
