--- a/content/03. Japanese/Japanese Vocabulary/部屋.md
+++ b/content/03. Japanese/Japanese Vocabulary/部屋.md
@@ -3,7 +3,7 @@
 > 1. [[Noun]]
 >   room | chamber
 > 2. apartment | flat | pad
-> 3. [[Abbreviation]], [[Sumō]]
+> 3. [[Abbreviation]], [[Sumo]]
 >    Stable
 > > [!important] see also
 > > [[相撲部屋]]
